src/app/globals.css
@import 'tailwindcss';
@plugin "@tailwindcss/typography";
@import 'tw-animate-css';

@custom-variant dark (&:where(.dark, .dark *));

:root {
  color-scheme: light;
  --background: #ffffff;
  --emphasized-background: #f5f5f4; /* stone-100 */
  --foreground: #1c1917; /* stone-900 */
  --muted-foreground: #78716c; /* stone-500 */
  --primary: #e11d48; /* rose-600 */
  --border: #78716c; /* stone-500 */

  --chart-1: hsl(346 55% 90%);
  --chart-2: hsl(346 55% 70%);
  --chart-3: hsl(346 55% 50%);
  --chart-4: hsl(346 55% 30%);
  --chart-5: hsl(12 55% 80%);
  --chart-6: hsl(12 55% 60%);
  --chart-7: hsl(12 55% 40%);
  --chart-8: hsl(12 55% 20%);
}

@theme inline {
  --color-background: var(--background);
  --color-emphasized-background: var(--emphasized-background);
  --color-foreground: var(--foreground);
  --color-muted-foreground: var(--muted-foreground);
  --color-primary: var(--primary);
  --color-border: var(--border);
  --font-sans: var(--font-figtree);
  --font-semimono: var(--font-geist);
  --font-mono: var(--font-geist-mono);
}

.dark {
  color-scheme: dark;
  --background: #292524; /* stone-800 */
  --emphasized-background: #1c1917; /* stone-900 */
  --foreground: #f5f5f4; /* stone-100 */
  --muted-foreground: #a8a29e; /* stone-400 */
  --primary: #fb7185; /* rose-400 */
  --border: #78716c; /* stone-500 */

  --chart-1: hsl(346 55% 20%);
  --chart-2: hsl(346 55% 40%);
  --chart-3: hsl(346 55% 60%);
  --chart-4: hsl(346 55% 80%);
  --chart-5: hsl(12 55% 20%);
  --chart-6: hsl(12 55% 40%);
  --chart-7: hsl(12 55% 60%);
  --chart-8: hsl(12 55% 80%);
}

html {
  scroll-behavior: smooth;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-figtree), sans-serif;
}

/* Chrome, Safari, Edge, Opera */
input[type='number']::-webkit-outer-spin-button,
input[type='number']::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type='number'] {
  -moz-appearance: textfield;
}

@layer utilities {
  .focus-outline {
    @apply focus-visible:outline-primary focus-visible:outline-2 focus-visible:outline-offset-2;
  }
}

@media (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: auto;
  }
}

@keyframes ellipsis {
  0% {
    content: '.';
  }
  33% {
    content: '..';
  }
  66% {
    content: '...';
  }
}

.loading-ellipsis::after {
  content: '.';
  animation: ellipsis 1.5s infinite;
}

